fetched the posts

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /*  
-Theme Name: Jay
-Theme URI: jay.com
+Theme Name: JayEngine
 Author: Thevenel Joazard
-Description: This is a description
+Author URI: thevenel.tech
+Description: This is a description of Jay Engine
 Version: 1.0.0
-Text Domain: Jay
-Licence: GNU v3 or later
+Tested up to: 5.5
 */
